cluster/apps/ingress/envoy/gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: envoy-gateway
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "*.${S_HOMEPROD_DOMAIN}"
      tls:
        mode: Terminate
        certificateRefs:
          - name: homeprod-domain-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: http
      port: 80
      protocol: HTTP
      hostname: "*.${S_HOMEPROD_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: Same
