cluster/apps/ingress/envoy/gateway/security-policy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: oidc
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-gateway
  oidc:
    provider:
      issuer: "https://sso.${S_HOMEPROD_DOMAIN}/application/o/gateway/"
      backendRefs:
        - group: ""
          kind: Service
          name: authentik-server
          namespace: default
          port: 80
    clientID: "8lRVJAKvaAvnGZVcrSVtFbMkmpLBQoauOi0fOuAZ"
    clientSecret:
      name: envoy-oidc-secret
    redirectURL: "https://echo.${S_HOMEPROD_DOMAIN}/oauth2/callback"
    logoutPath: "/oauth2/logout"
    cookieDomain: "${S_HOMEPROD_DOMAIN}"
